--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -145,20 +145,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# disc_diameter = 8.26\n",
     "# distance = 36\n",
-    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)"
+    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)\n",
+    "x = None\n",
+    "y = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rect_coordinates' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m         \u001b[39m#drawing rectangle around detected objects\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m         x, y, w, h \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mboundingRect(cnt)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m         rect_coordinates \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(rect_coordinates,[x,y,w,h])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m         cv2\u001b[39m.\u001b[39mrectangle(frame, (x, y), (x \u001b[39m+\u001b[39m w, y \u001b[39m+\u001b[39m h), (\u001b[39m0\u001b[39m,\u001b[39m255\u001b[39m,\u001b[39m0\u001b[39m),\u001b[39m3\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39m#this is not working\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m# disc_length_pixels = w\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39m# conversion_rate = (1/ppi) * (disc_length / disc_length_pixels)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X13sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m \u001b[39m# Check if previous position and time are available\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rect_coordinates' is not defined"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Get current time\n",
@@ -211,7 +225,7 @@
     "        # Calculate the velocity in the x and y directions\n",
     "        vx = (dx / dt) \n",
     "        vy = (dy / dt)\n",
-    "\n",
+    "        \n",
     "        # Add the velocity values to the DataFrame\n",
     "        velocities = pd.concat([velocities, new_data])\n",
     "\n",
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
