--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'new_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X31sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m vy \u001b[39m=\u001b[39m (dy \u001b[39m/\u001b[39m dt)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X31sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m \u001b[39m# Add the velocity values to the DataFrame\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X31sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m velocities \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([velocities, new_data])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X31sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m vx_mph \u001b[39m=\u001b[39m vx \u001b[39m*\u001b[39m conversion_rate \u001b[39m*\u001b[39m \u001b[39m0.44704\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X31sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m vy_mph \u001b[39m=\u001b[39m vy \u001b[39m*\u001b[39m conversion_rate \u001b[39m*\u001b[39m \u001b[39m0.44704\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Get current time\n",
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
