--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# disc_diameter = 8.26\n",
     "# distance = 36\n",
-    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)"
+    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
     "        # Calculate the velocity in the x and y directions\n",
     "        vx = (dx / dt) \n",
     "        vy = (dy / dt)\n",
-    "\n",
+    "        \n",
     "        # Add the velocity values to the DataFrame\n",
     "        velocities = pd.concat([velocities, new_data])\n",
     "\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -264,33 +264,33 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0 -1259.184717 -145.914109\n",
-      "0     0.000000    5.223240\n",
-      "0     0.000000   17.511819\n",
-      "0     0.000000   21.445986\n",
-      "0    30.133716   20.962585\n",
-      "0    40.105727   18.799559\n",
-      "0    46.382567   16.370318\n",
-      "0    50.600780    6.746771\n",
-      "0    52.394119    2.041329\n",
-      "0    53.083499    0.663544\n",
-      "0    53.207474    1.297743\n",
-      "0    55.219961    1.972141\n",
-      "0    57.532417    0.000000\n",
-      "0    54.910174    0.661568\n",
-      "0    54.452693    0.000000\n",
-      "0    53.674611    1.277967\n",
-      "0    55.376448    1.318487\n",
-      "0    54.585910    1.269440\n",
-      "0    55.432760    0.000000\n",
-      "0    52.859333    1.258556\n",
-      "0    57.401440    1.304578\n",
-      "0    56.990934    0.647624\n",
-      "0    55.340915    0.628874\n",
-      "0    59.293481    1.363069\n",
-      "0    57.363936    1.318711\n",
-      "0    53.430635    1.242573\n",
-      "0    56.578765   16.716453\n",
+      "0 -1130.151743 -130.961790\n",
+      "0     0.000000    5.178700\n",
+      "0     0.000000   15.433830\n",
+      "0     0.000000   19.682880\n",
+      "0    27.972874   19.459390\n",
+      "0    39.534070   18.531595\n",
+      "0    43.624746   15.396969\n",
+      "0    46.157691    6.154359\n",
+      "0    47.583701    1.853910\n",
+      "0    51.806048    0.647576\n",
+      "0    52.759744    1.286823\n",
+      "0    54.303453    1.939409\n",
+      "0    48.073375    0.000000\n",
+      "0    51.137126    0.616110\n",
+      "0    51.859575    0.000000\n",
+      "0    50.878470    1.211392\n",
+      "0    53.746883    1.279688\n",
+      "0    54.363254    1.264262\n",
+      "0    53.666068    0.000000\n",
+      "0    52.526645    1.250634\n",
+      "0    54.182195    1.231414\n",
+      "0    56.349273    0.640333\n",
+      "0    54.616339    0.620640\n",
+      "0    48.777762    1.121328\n",
+      "0    55.040600    1.265301\n",
+      "0    53.689701    1.248598\n",
+      "0    53.740368   15.877836\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
