--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,65 +100,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #calculating ppi for full 1920x1080 frame\n",
-    "# pixels = frame_width*frame_height\n",
-    "# inches = 24*18\n",
-    "# ppi = math.sqrt(pixels) / math.sqrt(inches)"
+    "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
+    "disc_length = 8.26 #disc length in inches\n",
+    "distance = 36 #distance of disc from camera, rough guess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "175.70482914340297\n",
-      "36.661356887239556\n",
-      "0.22530535422912829\n"
+      "25\n",
+      "52\n",
+      "82\n",
+      "123\n",
+      "129\n",
+      "128\n",
+      "136\n",
+      "145\n",
+      "153\n",
+      "158\n",
+      "160\n",
+      "160\n",
+      "159\n",
+      "162\n",
+      "164\n",
+      "168\n",
+      "172\n",
+      "173\n",
+      "176\n",
+      "182\n",
+      "184\n",
+      "184\n",
+      "182\n",
+      "187\n",
+      "193\n",
+      "144\n",
+      "56\n"
      ]
     }
    ],
-   "source": [
-    "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
-    "disc_length = 8.26 #disc length in inches\n",
-    "distance = 36 #distance of disc from camera, rough guess\n",
-    "\n",
-    "#Approximate field of view (in degrees)\n",
-    "fov = 2 * np.arctan(frame_width / (2 * distance)) * 180 / np.pi\n",
-    "print(fov)\n",
-    "\n",
-    "# Width of the object in pixels   \n",
-    "object_width_pixels = abs((disc_length/2) / (np.tan(fov/2)))\n",
-    "print (object_width_pixels)\n",
-    "#calculate conversion rate\n",
-    "conversion_rate = disc_length / object_width_pixels\n",
-    "print(conversion_rate)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# disc_diameter = 8.26\n",
-    "# distance = 36\n",
-    "# disc_diameter_pixels = (disc_diameter * frame_height * frame_width) / (distance*2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "while True:\n",
     "    # Get current time\n",
@@ -184,7 +173,7 @@
     "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "       \n",
     "    \n",
-    "\n",
+    "    longest_width = 0\n",
     "    for cnt in rgb_contours:\n",
     "        #calculate error, remove small elements\n",
     "        area = cv2.contourArea(cnt)\n",
@@ -192,12 +181,15 @@
     "            cv2.drawContours(frame, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
+    "            if w > longest_width:\n",
+    "                longest_width = w\n",
+    "            print(longest_width)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
     "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "            \n",
-    "    #this is not working\n",
-    "    # disc_length_pixels = w\n",
-    "    # conversion_rate = (1/ppi) * (disc_length / disc_length_pixels)\n",
+    "    if longest_width > 0:\n",
+    "        conversion_rate = disc_length / longest_width\n",
+    "    \n",
     "\n",
     "    # Check if previous position and time are available\n",
     "    if prev_x is not None and prev_y is not None and prev_time is not None:\n",
@@ -215,8 +207,8 @@
     "        # Add the velocity values to the DataFrame\n",
     "        velocities = pd.concat([velocities, new_data])\n",
     "\n",
-    "        vx_mph = vx * conversion_rate * 0.44704\n",
-    "        vy_mph = vy * conversion_rate * 0.44704\n",
+    "        vx_mph = vx * conversion_rate\n",
+    "        vy_mph = vy * conversion_rate\n",
     "\n",
     "        # Display the velocity values on the output video\n",
     "        cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
@@ -248,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -264,33 +256,33 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0 -1130.151743 -130.961790\n",
-      "0     0.000000    5.178700\n",
-      "0     0.000000   15.433830\n",
-      "0     0.000000   19.682880\n",
-      "0    27.972874   19.459390\n",
-      "0    39.534070   18.531595\n",
-      "0    43.624746   15.396969\n",
-      "0    46.157691    6.154359\n",
-      "0    47.583701    1.853910\n",
-      "0    51.806048    0.647576\n",
-      "0    52.759744    1.286823\n",
-      "0    54.303453    1.939409\n",
-      "0    48.073375    0.000000\n",
-      "0    51.137126    0.616110\n",
-      "0    51.859575    0.000000\n",
-      "0    50.878470    1.211392\n",
-      "0    53.746883    1.279688\n",
-      "0    54.363254    1.264262\n",
-      "0    53.666068    0.000000\n",
-      "0    52.526645    1.250634\n",
-      "0    54.182195    1.231414\n",
-      "0    56.349273    0.640333\n",
-      "0    54.616339    0.620640\n",
-      "0    48.777762    1.121328\n",
-      "0    55.040600    1.265301\n",
-      "0    53.689701    1.248598\n",
-      "0    53.740368   15.877836\n",
+      "0 -3758.418995 -435.524948\n",
+      "0     0.000000    7.605301\n",
+      "0     0.000000   16.289109\n",
+      "0     0.000000   13.739671\n",
+      "0    17.849654   12.417151\n",
+      "0    26.640536   12.487751\n",
+      "0    25.083988    8.853172\n",
+      "0    27.581402    3.677520\n",
+      "0    25.786153    1.004655\n",
+      "0    25.116402    0.313955\n",
+      "0    27.165506    0.662573\n",
+      "0    27.412326    0.979012\n",
+      "0    26.634117    0.000000\n",
+      "0    26.050776    0.313865\n",
+      "0    26.224592    0.000000\n",
+      "0    26.114770    0.621780\n",
+      "0    24.882207    0.592434\n",
+      "0    25.156543    0.585036\n",
+      "0    24.736989    0.000000\n",
+      "0    23.526090    0.560145\n",
+      "0    24.151809    0.548905\n",
+      "0    24.885554    0.282790\n",
+      "0    25.556833    0.290419\n",
+      "0    23.928325    0.550076\n",
+      "0    22.660947    0.520941\n",
+      "0    32.337509    0.752035\n",
+      "0    84.614363   24.999698\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
