--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,21 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "119.88011988011988\n"
+     ]
+    }
+   ],
    "source": [
     "#open video\n",
     "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Daniel_7_top_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
-    "\n",
+    "print(fps)\n",
     "if cap.isOpened() == False:\n",
     "    print(\"Cannot open video file.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,66 +96,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining rgb range to detect orange for now\n",
-    "\n",
     "lower_color_bound = np.array([0,100,178])\n",
     "upper_color_bound = np.array([255,255,255])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
     "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
-    "distance = 36 #distance of disc from camera, rough guess"
+    "distance = 36 #distance of disc from camera, rough guess\n",
+    "conversion_rate = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n",
-      "52\n",
-      "82\n",
-      "123\n",
-      "129\n",
-      "128\n",
-      "136\n",
-      "145\n",
-      "153\n",
-      "158\n",
-      "160\n",
-      "160\n",
-      "159\n",
-      "162\n",
-      "164\n",
-      "168\n",
-      "172\n",
-      "173\n",
-      "176\n",
-      "182\n",
-      "184\n",
-      "184\n",
-      "182\n",
-      "187\n",
-      "193\n",
-      "144\n",
-      "56\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "orb = cv2.ORB_create()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "while True:\n",
     "    # Get current time\n",
@@ -156,9 +139,9 @@
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
-    "    #regions of interest\n",
+    "    \n",
     "    height, width, _ = frame.shape\n",
-    "    roi = frame[200:900, 100:1800]\n",
+    "    \n",
     "    \n",
     "    #object detection\n",
     "    mask = object_detector.apply(frame)\n",
@@ -183,9 +166,12 @@
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
     "            if w > longest_width:\n",
     "                longest_width = w\n",
-    "            print(longest_width)\n",
+    "            #print(longest_width)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
     "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "        \n",
+    "        # keypoints, descriptors = orb.detectAndCompute(cnt, None)\n",
+    "        # frame_keypoints = cv2.drawKeypoints(frame, keypoints, None)\n",
     "            \n",
     "    if longest_width > 0:\n",
     "        conversion_rate = disc_length / longest_width\n",
@@ -209,10 +195,12 @@
     "\n",
     "        vx_mph = vx * conversion_rate\n",
     "        vy_mph = vy * conversion_rate\n",
+    "        velocity = np.linalg.norm([vx_mph, vy_mph])\n",
     "\n",
     "        # Display the velocity values on the output video\n",
     "        cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
     "        cv2.putText(frame, 'Y Velocity: {:.2f} mph'.format(vy_mph), (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "        cv2.putText(frame, 'True Velocity: {:.2f} mph'.format(velocity), (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
     "\n",
     "        # create a new dataframe with the new velocities\n",
     "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
@@ -220,13 +208,14 @@
     "    # Update the previous position and time variables\n",
     "    prev_x, prev_y = x, y\n",
     "    prev_time = current_time\n",
-    "    \n",
+    "\n",
     "    cv2.imshow(\"frame\", frame)\n",
+    "    # cv2.imshow(\"frame keypoints\", frame_keypoints)\n",
     "    #cv2.imshow(\"roi\", roi)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    #cv2.imshow(\"maskrgb\",mask_rgb)\n",
     "    \n",
-    "    #output.write(roi)\n",
+    "    output.write(frame)\n",
     "    #output2.write(mask)\n",
     "    if cv2.waitKey(120) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -240,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -256,33 +245,33 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0 -3758.418995 -435.524948\n",
-      "0     0.000000    7.605301\n",
-      "0     0.000000   16.289109\n",
-      "0     0.000000   13.739671\n",
-      "0    17.849654   12.417151\n",
-      "0    26.640536   12.487751\n",
-      "0    25.083988    8.853172\n",
-      "0    27.581402    3.677520\n",
-      "0    25.786153    1.004655\n",
-      "0    25.116402    0.313955\n",
-      "0    27.165506    0.662573\n",
-      "0    27.412326    0.979012\n",
-      "0    26.634117    0.000000\n",
-      "0    26.050776    0.313865\n",
-      "0    26.224592    0.000000\n",
-      "0    26.114770    0.621780\n",
-      "0    24.882207    0.592434\n",
-      "0    25.156543    0.585036\n",
-      "0    24.736989    0.000000\n",
-      "0    23.526090    0.560145\n",
-      "0    24.151809    0.548905\n",
-      "0    24.885554    0.282790\n",
-      "0    25.556833    0.290419\n",
-      "0    23.928325    0.550076\n",
-      "0    22.660947    0.520941\n",
-      "0    32.337509    0.752035\n",
-      "0    84.614363   24.999698\n",
+      "0 -3403.114888 -394.352369\n",
+      "0     0.000000    6.844011\n",
+      "0     0.000000   14.656906\n",
+      "0     0.000000   12.536051\n",
+      "0    16.252159   11.305850\n",
+      "0    24.124666   11.308437\n",
+      "0    24.376292    8.603397\n",
+      "0    26.318166    3.509089\n",
+      "0    24.325267    0.947738\n",
+      "0    25.173965    0.314675\n",
+      "0    23.630444    0.576352\n",
+      "0    25.674809    0.916957\n",
+      "0    25.172866    0.000000\n",
+      "0    25.636043    0.308868\n",
+      "0    24.761697    0.000000\n",
+      "0    25.116467    0.598011\n",
+      "0    24.350779    0.579780\n",
+      "0    25.435679    0.591527\n",
+      "0    24.415680    0.000000\n",
+      "0    23.577917    0.561379\n",
+      "0    22.998768    0.522699\n",
+      "0    22.783940    0.258908\n",
+      "0    23.726429    0.269619\n",
+      "0    22.595356    0.519433\n",
+      "0    21.142233    0.486028\n",
+      "0    30.058669    0.699039\n",
+      "0    78.746904   23.266131\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
