--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,30 +96,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining rgb range to detect orange for now\n",
     "lower_color_bound = np.array([0,100,178])\n",
-    "upper_color_bound = np.array([255,255,255])"
+    "upper_color_bound = np.array([255,255,255])\n",
+    "\n",
+    "# blue_lower_bound = np.array([60,50,0])\n",
+    "# blue_upper_bound = np.array([170,255,255])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
     "distance = 36 #distance of disc from camera, rough guess\n",
-    "conversion_rate = 0"
+    "conversion_rate = 0\n",
+    "rect_coordinates = 0\n",
+    "new_data = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,61 +234,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    x_velocity  y_velocity\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0 -3403.114888 -394.352369\n",
-      "0     0.000000    6.844011\n",
-      "0     0.000000   14.656906\n",
-      "0     0.000000   12.536051\n",
-      "0    16.252159   11.305850\n",
-      "0    24.124666   11.308437\n",
-      "0    24.376292    8.603397\n",
-      "0    26.318166    3.509089\n",
-      "0    24.325267    0.947738\n",
-      "0    25.173965    0.314675\n",
-      "0    23.630444    0.576352\n",
-      "0    25.674809    0.916957\n",
-      "0    25.172866    0.000000\n",
-      "0    25.636043    0.308868\n",
-      "0    24.761697    0.000000\n",
-      "0    25.116467    0.598011\n",
-      "0    24.350779    0.579780\n",
-      "0    25.435679    0.591527\n",
-      "0    24.415680    0.000000\n",
-      "0    23.577917    0.561379\n",
-      "0    22.998768    0.522699\n",
-      "0    22.783940    0.258908\n",
-      "0    23.726429    0.269619\n",
-      "0    22.595356    0.519433\n",
-      "0    21.142233    0.486028\n",
-      "0    30.058669    0.699039\n",
-      "0    78.746904   23.266131\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n"
+      "   x_velocity  y_velocity\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000  405.304839\n",
+      "0    0.000000    7.550217\n",
+      "0    0.000000   16.024052\n",
+      "0    0.000000   13.286987\n",
+      "0   18.287748   12.721911\n",
+      "0   25.179554   11.802916\n",
+      "0   24.626463    8.691693\n",
+      "0   25.800519    3.440069\n",
+      "0   25.215621    0.982427\n",
+      "0   25.605325    0.320067\n",
+      "0   25.367808    0.618727\n",
+      "0   25.815873    0.921995\n",
+      "0   25.919069    0.000000\n",
+      "0   24.582607    0.296176\n",
+      "0   25.817632    0.000000\n",
+      "0   25.080756    0.597161\n",
+      "0   24.280749    0.578113\n",
+      "0   25.159299    0.585100\n",
+      "0   24.378270    0.000000\n",
+      "0   23.267625    0.553991\n",
+      "0   21.761027    0.494569\n",
+      "0   23.621062    0.268421\n",
+      "0   23.544615    0.267552\n",
+      "0   23.071804    0.530386\n",
+      "0   22.758199    0.523177\n",
+      "0   29.886085    0.695025\n",
+      "0   77.231991   22.818543\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n",
+      "0    0.000000    0.000000\n"
      ]
     }
    ],
