trying with colorblock vinyl

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
    ],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Daniel_7_top_trim.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/colorblock2.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "print(fps)\n",
     "if cap.isOpened() == False:\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining rgb range to detect orange for now\n",
     "lower_color_bound = np.array([0,100,178])\n",
-    "upper_color_bound = np.array([255,255,255])"
+    "upper_color_bound = np.array([255,255,255])\n",
+    "\n",
+    "blue_lower_bound = np.array([])\n",
+    "blue_upper_bound = np.array([])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +171,7 @@
     "                longest_width = w\n",
     "            #print(longest_width)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            # cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "        \n",
     "        # keypoints, descriptors = orb.detectAndCompute(cnt, None)\n",
     "        # frame_keypoints = cv2.drawKeypoints(frame, keypoints, None)\n",
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -245,33 +248,6 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0 -3403.114888 -394.352369\n",
-      "0     0.000000    6.844011\n",
-      "0     0.000000   14.656906\n",
-      "0     0.000000   12.536051\n",
-      "0    16.252159   11.305850\n",
-      "0    24.124666   11.308437\n",
-      "0    24.376292    8.603397\n",
-      "0    26.318166    3.509089\n",
-      "0    24.325267    0.947738\n",
-      "0    25.173965    0.314675\n",
-      "0    23.630444    0.576352\n",
-      "0    25.674809    0.916957\n",
-      "0    25.172866    0.000000\n",
-      "0    25.636043    0.308868\n",
-      "0    24.761697    0.000000\n",
-      "0    25.116467    0.598011\n",
-      "0    24.350779    0.579780\n",
-      "0    25.435679    0.591527\n",
-      "0    24.415680    0.000000\n",
-      "0    23.577917    0.561379\n",
-      "0    22.998768    0.522699\n",
-      "0    22.783940    0.258908\n",
-      "0    23.726429    0.269619\n",
-      "0    22.595356    0.519433\n",
-      "0    21.142233    0.486028\n",
-      "0    30.058669    0.699039\n",
-      "0    78.746904   23.266131\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
@@ -283,7 +259,36 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n"
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0     0.000000    0.000000\n",
+      "0 -2878.816556  -89.576910\n",
+      "0     4.746775  -21.360485\n",
+      "0    39.698618   -7.490305\n",
+      "0    22.751700   -9.174073\n",
+      "0    12.276554   -9.953963\n",
+      "0     4.711781  -17.904768\n",
+      "0    82.650243   54.903376\n",
+      "0    26.752693   -1.486261\n",
+      "0   -98.162241  -79.422176\n",
+      "0    -4.588612  -10.897952\n",
+      "0    -1.043422  -11.477639\n",
+      "0    -1.393858   -1.115086\n",
+      "0   258.571099   89.742681\n",
+      "0    13.008651   -2.123861\n",
+      "0    31.410905   11.712541\n",
+      "0    54.919442   -6.217295\n",
+      "0    22.342575   -3.647767\n",
+      "0    18.691454   -2.963279\n",
+      "0    13.054693   20.276438\n",
+      "0    51.922854  -61.363373\n"
      ]
     }
    ],
