blue range defined

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -104,8 +104,8 @@
     "lower_color_bound = np.array([0,100,178])\n",
     "upper_color_bound = np.array([255,255,255])\n",
     "\n",
-    "blue_lower_bound = np.array([])\n",
-    "blue_upper_bound = np.array([])"
+    "blue_lower_bound = np.array([60,50,0])\n",
+    "blue_upper_bound = np.array([170,255,255])"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "\n",
     "    #trying rgb threshold\n",
     "    mask = cv2.cvtColor(frame,cv2.COLOR_BGR2HSV) \n",
-    "    mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
+    "    mask_rgb = cv2.inRange(mask,blue_lower_bound,blue_upper_bound)\n",
     "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "       \n",
     "    \n",
