tracking blue quadrants

--- a/spinrate.ipynb
+++ b/spinrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining size for output videos\n",
-    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
+    "output = cv2.VideoWriter('/Users/danielrosenthal/Documents/EGR_314/output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
     "#output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,25 +104,27 @@
     "lower_color_bound = np.array([0,100,178])\n",
     "upper_color_bound = np.array([255,255,255])\n",
     "\n",
-    "blue_lower_bound = np.array([60,50,0])\n",
+    "blue_lower_bound = np.array([100,80,80])\n",
     "blue_upper_bound = np.array([170,255,255])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
     "distance = 36 #distance of disc from camera, rough guess\n",
-    "conversion_rate = 0"
+    "conversion_rate = 0\n",
+    "rect_coordinates = 0\n",
+    "new_data = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +220,7 @@
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    #cv2.imshow(\"maskrgb\",mask_rgb)\n",
     "    \n",
-    "    output.write(frame)\n",
+    "    # output.write(frame)\n",
     "    #output2.write(mask)\n",
     "    if cv2.waitKey(120) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -269,26 +271,25 @@
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
       "0     0.000000    0.000000\n",
-      "0 -2878.816556  -89.576910\n",
-      "0     4.746775  -21.360485\n",
-      "0    39.698618   -7.490305\n",
-      "0    22.751700   -9.174073\n",
-      "0    12.276554   -9.953963\n",
-      "0     4.711781  -17.904768\n",
-      "0    82.650243   54.903376\n",
-      "0    26.752693   -1.486261\n",
-      "0   -98.162241  -79.422176\n",
-      "0    -4.588612  -10.897952\n",
-      "0    -1.043422  -11.477639\n",
-      "0    -1.393858   -1.115086\n",
-      "0   258.571099   89.742681\n",
-      "0    13.008651   -2.123861\n",
-      "0    31.410905   11.712541\n",
-      "0    54.919442   -6.217295\n",
-      "0    22.342575   -3.647767\n",
-      "0    18.691454   -2.963279\n",
-      "0    13.054693   20.276438\n",
-      "0    51.922854  -61.363373\n"
+      "0 -1552.849080   59.204486\n",
+      "0    88.660736   -8.692229\n",
+      "0    59.005951   -4.214711\n",
+      "0    50.486537   -2.524327\n",
+      "0    61.647663   -3.424870\n",
+      "0    71.930826   -0.733988\n",
+      "0    74.892172    8.987061\n",
+      "0   139.594836   -7.931525\n",
+      "0    68.775657  -11.228679\n",
+      "0    46.748225   -3.420602\n",
+      "0    39.081128   -3.085352\n",
+      "0    47.203251   -2.170264\n",
+      "0    64.544725   -2.607868\n",
+      "0    70.390175    5.976524\n",
+      "0   126.462291    3.871295\n",
+      "0    62.738626  -12.065120\n",
+      "0    41.535076   -4.247906\n",
+      "0    33.266305   -1.622747\n",
+      "0   144.606202   13.146018\n"
      ]
     }
    ],
